--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.5.0
 anyio==3.7.1
+attrs==23.1.0
 click==8.1.7
 contourpy==1.1.1
 cycler==0.11.0
@@ -8,7 +9,10 @@ fonttools==4.42.1
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+japanize-matplotlib==1.1.3
 Jinja2==3.1.2
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
 kiwisolver==1.4.5
 MarkupSafe==2.1.3
 matplotlib==3.8.0
@@ -21,6 +25,8 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 PyYAML==6.0.1
+referencing==0.30.2
+rpds-py==0.10.3
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
